# waifu_api

./: .gitignore  README.md
.github/workflows/: ci.yml
api/: CMakeLists.txt  Dockerfile  Dockerfile.ubuntu
api/src/: main.cpp
terraform/: main.tf  outputs.tf  variables.tf
